--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css);
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +11,29 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.section2{
+  margin-top: 20rem;
+  background-color: black
+}
+
+p{
+  color: white;
+  text-decoration:underline;
+  font-size: 20px;
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.navbar {
+  background-color: hsl(162, 55%, 45%);
+  padding: 20px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(189, 20, 20, 0.19), 0 6px 6px rgba(190, 166, 30, 0.23);
+}
+
+.search{
+  width: 90px;
 }
