--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
+#container {
+  color:black;
+  display: block;
+  box-sizing:border-box;
+  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  height: 584px;
+  line-height: 24px;
+  margin-left: 75px;
+  margin-right: 75px;
+  max-width: 1200px;
+  text-size-adjust: 100%;
+}
+
+img {
+  width: 100%;
+}
+
+h1 {
+  font-weight: 700;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
