--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,23 @@ img {
   width: 100%;
 }
 
-h1 {
+h5 {
   font-weight: 700;
   text-align: center;
+}
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css");
+
+section {
+  margin-top: 6rem;
+
+}
+
+p {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 25px;
+
+}
+
+.card mb-3 {
+  display: flex;
 }
