--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -47,4 +47,83 @@ p{
 .search{
   width: 90px;
 
+}
+
+#container {
+  color:black;
+  display: block;
+  box-sizing:border-box;
+  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  height: 584px;
+  line-height: 24px;
+  margin-left: 75px;
+  margin-right: 75px;
+  max-width: 1200px;
+  text-size-adjust: 100%;
+}
+
+img {
+  width: 100%;
+}
+
+h5 {
+  font-weight: 700;
+  text-align: center;
+}
+
+section {
+  margin-top: 6rem;
+
+}
+
+p {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 25px;
+
+}
+
+.card mb-3 {
+  display: flex;
+}
+
+#container {
+  color:black;
+  display: block;
+  box-sizing:border-box;
+  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  height: 584px;
+  line-height: 24px;
+  margin-left: 75px;
+  margin-right: 75px;
+  max-width: 1200px;
+  text-size-adjust: 100%;
+}
+
+img {
+  width: 100%;
+}
+
+h5{
+  font-weight: 400;
+  text-align: center;
+}
+
+section {
+  margin-top: 6rem;
+
+}
+
+p {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 25px;
+
+}
+
+.card mb-3 {
+  display: flex;
+  max-width: 540px
 }
