--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css");
+
+.cardCarrier{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +13,117 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card{
+  width:350px;
+  height: 500px;
+}
+
+
+
+.section2{
+  margin-top: 20rem;
+  background-color: black
+}
+
+p{
+  color: white;
+  text-decoration:underline;
+  font-size: 20px;
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.navbar {
+  background-color: hsl(162, 55%, 45%);
+  padding: 20px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(189, 20, 20, 0.19), 0 6px 6px rgba(190, 166, 30, 0.23);
+}
+
+.search{
+  width: 90px;
+
+}
+
+#container {
+  color:black;
+  display: block;
+  box-sizing:border-box;
+  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  height: 584px;
+  line-height: 24px;
+  margin-left: 75px;
+  margin-right: 75px;
+  max-width: 1200px;
+  text-size-adjust: 100%;
+}
+
+img {
+  width: 100%;
+}
+
+h5 {
+  font-weight: 700;
+  text-align: center;
+}
+
+section {
+  margin-top: 6rem;
+
+}
+
+p {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 25px;
+
+}
+
+.card mb-3 {
+  display: flex;
+}
+
+#container {
+  color:black;
+  display: block;
+  box-sizing:border-box;
+  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  height: 584px;
+  line-height: 24px;
+  margin-left: 75px;
+  margin-right: 75px;
+  max-width: 1200px;
+  text-size-adjust: 100%;
+}
+
+img {
+  width: 100%;
+}
+
+h5{
+  font-weight: 400;
+  text-align: center;
+}
+
+section {
+  margin-top: 6rem;
+
+}
+
+p {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 25px;
+
+}
+
+.card mb-3 {
+  display: flex;
+  max-width: 540px
 }
