--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,74 @@
-#container {
-  color:black;
-  display: block;
-  box-sizing:border-box;
-  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  height: 584px;
-  line-height: 24px;
-  margin-left: 75px;
-  margin-right: 75px;
-  max-width: 1200px;
-  text-size-adjust: 100%;
-}
-
-img {
-  width: 100%;
-}
-
-h5 {
-  font-weight: 700;
+.App {
   text-align: center;
 }
-@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css");
 
-section {
-  margin-top: 6rem;
-
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-p {
-  font-family:'Times New Roman', Times, serif;
-  font-size: 25px;
-
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-.card mb-3 {
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.image-section {
+  position: relative;
+  width: 100%;
+  height: 900px; /* Adjust the height as needed */
+  background-image: url("https://images.unsplash.com/photo-1504754524776-8f4f37790ca0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: center;
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.search-icon {
+  color: white;
+  font-size: 24px;
+}
+
+.app {
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding: 20px; 
+}
+
+.section1{
+margin-top: 20rem;
+}
+
+.d-flex{
+  width: 790px;
+  height: 50px;
 }
